--- a/Common/Components/Icon.razor
+++ b/Common/Components/Icon.razor
@@ -16,7 +16,7 @@
 
     protected override void OnInitialized()
     {
-        _ = _builder.Append("common-icon");
+        _ = _builder.Append("common__icon");
         base.OnInitialized();
     }
 }
