--- a/Common/Components/Image.razor
+++ b/Common/Components/Image.razor
@@ -11,7 +11,7 @@
 
     protected override void OnInitialized()
     {
-        _ = _builder.Append("common-image");
+        _ = _builder.Append("common__image");
         base.OnInitialized();
     }
 }
