--- a/Common/Components/Paragraph.razor
+++ b/Common/Components/Paragraph.razor
@@ -10,7 +10,7 @@
 
     protected override void OnInitialized()
     {
-        _ = _builder.Append("common-paragraph");
+        _ = _builder.Append("common__paragraph");
         base.OnInitialized();
     }
 }
