--- a/Common/Components/Templates/QuoteTemplate.razor
+++ b/Common/Components/Templates/QuoteTemplate.razor
@@ -11,7 +11,7 @@
 
     protected override void OnInitialized()
     {
-        _ = _builder.Append("common-quote-template");
+        _ = _builder.Append("common__quotetemplate");
         base.OnInitialized();
     }
 }
