--- a/Common/Components/DropDown.razor.css
+++ b/Common/Components/DropDown.razor.css
@@ -1,9 +1,9 @@
-﻿.common-drop-down {
+﻿.common__dropdown {
     display: inline-block;
     vertical-align: bottom;
 }
 
-.common-drop-down-content {
+.common__dropdown__content {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -13,14 +13,14 @@
     visibility: visible;
     z-index: 1;
 }
-.common-drop-down-content {
-    & .common-link {
+.common__dropdown__content {
+    & .common__link {
         border-radius: 0;
         text-align: justify;
         width: stretch;
     }
 }
 
-.common-drop-down-content.hidden {
+.common__dropdown__content.hidden {
     visibility: hidden;
 }
