--- a/Common/Components/Link.razor
+++ b/Common/Components/Link.razor
@@ -1,12 +1,12 @@
 ﻿@using Common.Enumerations
 @using Common.Extensions
-@inherits Op
+@inherits BaseComponent
 
 <a class=@_builder aria-label=@Label
-    style="--common-op-color:@(Color.ToVar());--common-op-font-size:@(FontSize.GetDescription());"
+    style="--common__link--color:@(Color.ToVar());--common__link--fontsize:@(FontSize.GetDescription());"
     href=@Url target=@(IsExternal ? "_blank" : null)>
     <Icon Content=StartIcon />
-    <div class="common-op-content">
+    <div class="common__link__content">
         @if (ChildContent is not null) @ChildContent
         else @Label
     </div>
@@ -14,17 +14,29 @@
     {
         <Icon Content=IconPath.OpenInNew />
     }
+    else
+    {
+        <Icon Content=EndIcon />
+    }
 </a>
 
 @code {
     [Parameter, EditorRequired]
     public string Url { get; set; }
+    [Parameter, EditorRequired]
+    public string Label { get; set; }
     [Parameter]
     public bool IsExternal { get; set; } = false;
+    [Parameter]
+    public IconPath? StartIcon { get; set; }
+    [Parameter]
+    public IconPath? EndIcon { get; set; }
+    [Parameter]
+    public RenderFragment? ChildContent { get; set; }
 
     protected override void OnInitialized()
     {
-        _ = _builder.Append("common-link");
+        _ = _builder.Append("common__link");
         base.OnInitialized();
     }
 }
