--- a/Common/Components/BaseComponent.razor
+++ b/Common/Components/BaseComponent.razor
@@ -1,4 +1,5 @@
 ﻿@using Common.Enumerations
+@using Common.Models
 @using Common.Tools
 
 @code {
@@ -6,10 +7,6 @@
 
     [Parameter]
     public string? Class { get; set; }
-    [Parameter]
-    public Color Color { get; set; } = default;
-    [Parameter]
-    public Size FontSize { get; set; } = default;
 
     protected override void OnInitialized()
     {
