--- a/Common/Components/Card.razor
+++ b/Common/Components/Card.razor
@@ -2,20 +2,20 @@
 
 <div class=@_builder>
     @Title
-    @ImageTemplate
+    @Illustration
     @Description
-    @LinkTemplate
+    @Action
 </div>
 
 @code {
     [Parameter]
     public RenderFragment? Title { get; set; }
     [Parameter]
-    public RenderFragment? ImageTemplate { get; set; }
+    public RenderFragment? Illustration { get; set; }
     [Parameter]
     public RenderFragment? Description { get; set; }
     [Parameter]
-    public RenderFragment? LinkTemplate { get; set; }
+    public RenderFragment? Action { get; set; }
 
     protected override void OnInitialized()
     {
@@ -23,6 +23,6 @@
         base.OnInitialized();
 
         if (Title is null) _ = _builder.Append("top");
-        if (Description is null && LinkTemplate is null) _ = _builder.Append("bottom");
+        if (Description is null && Action is null) _ = _builder.Append("bottom");
     }
 }
