--- a/ABM.Paie.Formation/Pages/Home.razor
+++ b/ABM.Paie.Formation/Pages/Home.razor
@@ -35,9 +35,7 @@
             </Paragraph>
         </Description>
         <Action>
-            <NavAction Model=facilae Class="facilae">
-                @facilae.Content
-            </NavAction>
+            <NavTemplate Model=facilae Class="facilae" />
         </Action>
     </Card>
 
