--- a/Common/Components/Templates/QuoteTemplate.razor
+++ b/Common/Components/Templates/QuoteTemplate.razor
@@ -7,7 +7,7 @@
 
 @code {
     [Parameter]
-    public QuoteData? Data { get; set; }
+    public QuoteModel? Data { get; set; }
 
     protected override void OnInitialized()
     {
