--- a/Common/Components/DropDownMenu.razor
+++ b/Common/Components/DropDownMenu.razor
@@ -6,44 +6,43 @@
 @inject NavigationManager NavigationManager
 
 
-@if (Menu.Any())
+@if (Title is not null)
 {
-    @* <AnchorTemplate Data=Menu.First() Color=Color.Primary FontSize=Size.Large /> *@
-    <!-- TODO aria-controls needs set up -->
-    <!-- TODO aria-expanded needs managed with Javascript -->
-    @* TODO button onclick sets css variable for display property *@
-    <button aria-label=@Title?.Uri.Label @onclick=Navigate>
-        @Title?.Uri.Content
-        @if (!IsBlock)
-        {
-            <Icon Content=@IconPath.ArrowDropDown Color=Enumerations.Color.Primary FontSize=Size.Large />
-        }
-    </button>
-
-    @if (Menu.Count() > 1)
+    var hasLinks = Menu.Count() > 1;
+    if (IsDropDown && hasLinks)
     {
-        <ul class="dropdown__menu">
-            @foreach (var link in Menu.Skip(1))
-            {
-                <li><NavAction Model=link /></li>
-            }
-        </ul>
+        Title.Action = () => { };
+        Title.Activator.EndIcon = IconPath.ArrowDropDown;
     }
+
+    <div class="common__dropdownmenu">
+        <!-- TODO aria-controls needs set up -->
+        <!-- TODO aria-expanded needs managed with Javascript -->
+        <NavTemplate Model=Title Class=@Class />
+
+        @if (hasLinks || ChildContent is not null)
+        {
+            <ul class="common__dropdownmenu__content">
+                @foreach (var link in Menu.Skip(1))
+                {
+                    <li><NavTemplate Model=link /></li>
+                }
+                @if (ChildContent is not null)
+                {
+                    <li>@ChildContent</li>
+                }
+            </ul>
+        }
+    </div>
 }
-@ChildContent
 
 @code {
     private NavModel? Title => Menu.FirstOrDefault();
 
-    [Parameter]
-    public bool IsBlock { get; set; } = false;
     [Parameter, EditorRequired]
     public IEnumerable<NavModel> Menu { get; set; }
     [Parameter]
+    public bool IsDropDown { get; set; } = true;
+    [Parameter]
     public RenderFragment? ChildContent { get; set; }
-
-    private void Navigate(MouseEventArgs _)
-    {
-        if (IsBlock && Title is not null) NavigationManager.NavigateTo(Title.Uri);
-    }
 }
